MVC Pattern : connexion.php

--- a/css/main.css
+++ b/css/main.css
@@ -153,3 +153,30 @@ form {
   display: inline-block;
   margin-left: 10px;
 }
+
+/*******************************************/
+
+/*************** Connexion *****************/
+
+.connexion .vcenter {
+    margin-top: 50px;
+}
+
+.connexion {
+    background: url('/idnove/images/Innovation.jpg') no-repeat center center;
+    background-size: cover;
+    color: #FFF;
+    background-color: #102357;
+    min-height: 500px;
+}
+
+.connexion .error {
+    color: red;
+    font-weight: bold;
+}
+
+.connexion .btn {
+    font-weight: bold;
+}
+
+/*******************************************/
