--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin-top: 150px;
 }
 
-body {
+.connexion {
     background-image: url('./images/Innovation.jpg');
     background-repeat: no-repeat;
     background-size: cover;
